syntax = "proto3";

package service;

option go_package = "/;proto";

service Services {
  rpc GetListMovie (GetListMovieReq) returns (GetListMovieResp) {}
  rpc GetDetailMovie (GetDetailMovieReq) returns (GetDetailMovieResp) {}
}

message RPCStatus {
  string Code = 1;
  string Message = 2;
}

message GetListMovieReq {
  string Search = 1;
  int64 Page = 2;
}

message GetListMovieResp {
  RPCStatus Status = 1;
  repeated ItemsMovie Items = 2;
  int64 Total = 3;
}

message GetDetailMovieReq {
  string MovieID = 1;
}

message GetDetailMovieResp {
  RPCStatus Status = 1;
}

message ItemsMovie {
  string Title = 1;
  string Year = 2;
  string MovieID = 3;
  string Types = 4;
  string Poster = 5;
}
